20-media/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: media
  labels:
    app: bazarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:latest
          ports:
            - name: http
              containerPort: 6767
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: config
          hostPath:
            path: /tank/app/arr/bazarr
            type: DirectoryOrCreate
        - name: media
          hostPath:
            path: /tank/media
            type: DirectoryOrCreate
        - name: downloads
          hostPath:
            path: /tank/media/downloads
            type: DirectoryOrCreate
