20-media/bazarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: media-authelia@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - bazarr.neleoz.com
      secretName: bazarr-tls
  rules:
    - host: bazarr.neleoz.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bazarr
                port:
                  number: 80
